--- a/po/es.po
+++ b/po/es.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: grilo master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=grilo&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2013-04-10 05:57+0000\n"
-"PO-Revision-Date: 2013-04-11 18:09+0200\n"
+"POT-Creation-Date: 2013-04-11 16:10+0000\n"
+"PO-Revision-Date: 2013-04-12 11:58+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "Language: es\n"
@@ -23,16 +23,16 @@ msgstr ""
 
 #: ../libs/net/grl-net-mock.c:80
 msgid "No mock definition found"
-msgstr ""
+msgstr "No se ha encontrado la definición de la simulación"
 
 #: ../libs/net/grl-net-mock.c:90
 #, c-format
 msgid "Could not find mock content %s"
-msgstr ""
+msgstr "No se ha podido encontrar el contenido de la simulación %s"
 
 #: ../libs/net/grl-net-mock.c:108
 msgid "Could not access mock content"
-msgstr ""
+msgstr "No se ha podido acceder al contenido de la simulación"
 
 #: ../libs/net/grl-net-private.c:56
 msgid "Cannot connect to the server"
@@ -45,7 +45,7 @@ msgstr "No se puede conectar con el servidor proxy"
 #: ../libs/net/grl-net-private.c:69
 #, c-format
 msgid "Invalid request URI or header: %s"
-msgstr ""
+msgstr "URI o cabecera solicitada no válida: %s"
 
 #: ../libs/net/grl-net-private.c:76
 #, c-format
@@ -55,7 +55,7 @@ msgstr "Se necesita autenticación: %s"
 #: ../libs/net/grl-net-private.c:81
 #, c-format
 msgid "The requested resource was not found: %s"
-msgstr ""
+msgstr "No se encontró el recurso solicitado: %s"
 
 #: ../libs/net/grl-net-private.c:88
 #, c-format
@@ -72,7 +72,7 @@ msgstr "Se canceló la operación"
 #: ../libs/net/grl-net-private.c:97
 #, c-format
 msgid "Unhandled status: %s"
-msgstr ""
+msgstr "Estado no manejado: %s"
 
 #: ../libs/net/grl-net-soup-stable.c:92
 #, c-format
@@ -87,14 +87,15 @@ msgstr "Información no disponible"
 #: ../src/grilo.c:181
 msgid "Semicolon-separated paths containing Grilo plugins"
 msgstr ""
+"Las rutas de los complementos de Grilo están separadas por punto y coma"
 
 #: ../src/grilo.c:183
 msgid "Colon-separated paths containing Grilo plugins"
-msgstr ""
+msgstr "Las rutas de los complementos de Grilo están separadas por dos puntos"
 
 #: ../src/grilo.c:186
 msgid "Colon-separated list of Grilo plugins to use"
-msgstr ""
+msgstr "Las listas de complementos de Grilo están separadas por dos puntos"
 
 #: ../src/grilo.c:191
 msgid "Grilo Options"
@@ -107,12 +108,12 @@ msgstr "Mostrar las opciones de Grilo"
 #: ../src/grl-multiple.c:130
 #, c-format
 msgid "No searchable sources available"
-msgstr ""
+msgstr "No hay fuentes en las que buscar"
 
 #: ../src/grl-multiple.c:488
 #, c-format
 msgid "Could not resolve media for URI '%s'"
-msgstr ""
+msgstr "No se han podido resolver los medios de comunicación para el URI «%s»"
 
 #: ../src/grl-registry.c:328 ../src/grl-registry.c:1002
 #, c-format
@@ -172,24 +173,24 @@ msgstr "No se encontró el complemento: «%s»"
 #: ../src/grl-registry.c:1294
 #, c-format
 msgid "Metadata key '%s' cannot be registered"
-msgstr ""
+msgstr "No se ha podido registrar la clave del metadato «%s»"
 
 #: ../src/grl-registry.c:1585
 #, c-format
 msgid "Plugin configuration does not contain 'plugin-id' reference"
-msgstr ""
+msgstr "La configuración del complemento no posee la referencia «plugin-id»"
 
 #: ../src/grl-source.c:2649
 #, c-format
 msgid "Some keys could not be written"
-msgstr ""
+msgstr "Algunas claves no se han podido escribir"
 
 #: ../src/grl-source.c:2723
 #, c-format
 msgid "None of the specified keys are writable"
-msgstr ""
+msgstr "Ninguna de las claves especificadas es modificable"
 
 #: ../src/grl-source.c:4014
 #, c-format
 msgid "Media has no 'id', cannot remove"
-msgstr ""
+msgstr "El soporte no tiene «id», no se puede eliminar"
