--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Alberto Garcia <agarcia@igalia.com>
 Bastien Nocera <hadess@hadess.net>
 Damien Lespiau <damien.lespiau@intel.com>
 Guillaume Emont <gemont@igalia.com>
