--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: grilo master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-07-20 19:55+0800\n"
-"PO-Revision-Date: 2013-07-20 19:55+0800\n"
+"POT-Creation-Date: 2013-08-16 10:09+0800\n"
+"PO-Revision-Date: 2013-08-16 10:10+0800\n"
 "Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.3\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../libs/net/grl-net-mock.c:79
 msgid "No mock definition found"
@@ -74,6 +74,12 @@ msgstr "未處理的狀態：%s"
 msgid "Data not available"
 msgstr "資料無法使用"
 
+#: ../libs/net/grl-net-wc.c:712
+#, c-format
+#| msgid "Malformed URL %s"
+msgid "Invalid URL %s"
+msgstr "無效的 URL %s"
+
 #: ../src/grilo.c:181
 msgid "Semicolon-separated paths containing Grilo plugins"
 msgstr "以分號(;)分隔的 Grilo 外掛程式路徑"
@@ -111,8 +117,8 @@ msgstr "外掛程式「%s」已經載入了"
 
 #: ../src/grl-registry.c:340
 #, c-format
-msgid "Failed to initialize plugin from %so"
-msgstr "無法初始化來自 %so 的外掛程式"
+msgid "Failed to initialize plugin from %s"
+msgstr "無法初始化來自 %s 的外掛程式"
 
 #: ../src/grl-registry.c:734
 #, c-format
@@ -183,6 +189,3 @@ msgstr "指定的設定鍵沒有可寫入的"
 #, c-format
 msgid "Media has no 'id', cannot remove"
 msgstr "媒體不具有「id」，不能移除"
-
-#~ msgid "Malformed URL %s"
-#~ msgstr "格式不良的 URL %s"
