--- a/po/id.po
+++ b/po/id.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: grilo master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=grilo&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2013-06-24 19:55+0000\n"
-"PO-Revision-Date: 2013-07-04 12:03+0700\n"
+"POT-Creation-Date: 2013-08-09 08:33+0000\n"
+"PO-Revision-Date: 2013-09-14 09:54+0700\n"
 "Last-Translator: Andika Triwidada <andika@gmail.com>\n"
-"Language-Team: Indonesian <gnome-l10n-id@googlegroups.com>\n"
+"Language-Team: Indonesian <gnome@i15n.org>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: ../libs/net/grl-net-mock.c:79
 msgid "No mock definition found"
@@ -75,6 +75,11 @@ msgstr "Status yang tak tertangani: %s"
 msgid "Data not available"
 msgstr "Data tak tersedia"
 
+#: ../libs/net/grl-net-wc.c:712
+#, c-format
+msgid "Invalid URL %s"
+msgstr "URL %s tak valid"
+
 #: ../src/grilo.c:181
 msgid "Semicolon-separated paths containing Grilo plugins"
 msgstr "Path yang dipisah titik koma yang memuat pengaya Grilo"
@@ -112,8 +117,8 @@ msgstr "Pengaya '%s' telah dimuat"
 
 #: ../src/grl-registry.c:340
 #, c-format
-msgid "Failed to initialize plugin from %so"
-msgstr "Gagal menginisialisasi pengaya dari %so"
+msgid "Failed to initialize plugin from %s"
+msgstr "Gagal menginisialisasi pengaya dari %s"
 
 #: ../src/grl-registry.c:734
 #, c-format
