--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,13 @@
 Alberto Garcia <agarcia@igalia.com>
 Bastien Nocera <hadess@hadess.net>
 Damien Lespiau <damien.lespiau@intel.com>
+Emanuele Aina <emanuele.aina@collabora.com>
 Guillaume Emont <gemont@igalia.com>
 Iago Toral Quiroga <itoral@igalia.com>
 Jens Georg <jensg@openismus.com>
 Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
+Kjartan Maraas <kmaraas@gnome.org>
 Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
 Mathias Hasselmann <mathias@openismus.com>
 Murray Cumming <murrayc@murrayc.com>
