--- a/grl-inspect.1
+++ b/grl-inspect.1
@@ -16,20 +16,23 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-grl-inspect \- show information about a Grilo source or plugin
+grl-inspect \- show information about Grilo sources and keys
 .SH SYNOPSIS
 .B grl-inspect
 .RI [ options ]
-.RI [ source ]
+.RI [ source | key ]
 .SH DESCRIPTION
 This manual page documents briefly the
 .B grl-inspect
 command.
 .PP
 \fBgrl-inspect\fP is a tool that prints out information on available Grilo
-sources. When executed with no SOURCE argument, grl-inspect will print
-the list of all plugins and sources. When executed with a SOURCE,
+sources and metadata keys. When executed with no SOURCE argument, grl-inspect
+will print the list of all plugins and sources. When executed with a SOURCE,
 grl-inspect will print information about that source.
+.PP
+Alternatively, using \fB-k\fP prints out information about the available
+metadata keys.
 .SH OPTIONS
 .TP
 .B \-h, \-\-help
@@ -40,6 +43,9 @@ Show summary of Grilo options.
 .TP
 .B \-\-help\-all
 Show summary of all options.
+.TP
+.B \-k
+Show information about metadata keys
 .TP
 .BI \-d,\ \-\-delay " seconds"
 Wait for some seconds before showing results. Useful when plugins may
