doc: Rename grl-inspect.1 to grl-inspect-0.2.1

--- a/grl-inspect-0.2.1
+++ b/grl-inspect-0.2.1
@@ -55,4 +55,4 @@ If not specified, by default it waits 1 second.
 .BI \-c,\ \-\-config " config-file"
 Configuration file to use with the plugins.
 .SH AUTHOR
-This manual page was written by Alberto Garcia <agarcia@igalia.com>.
+This manual page was written by Alberto Garcia <berto@igalia.com>.
