--- a/grl-launch-0.3.1
+++ b/grl-launch-0.3.1
@@ -82,7 +82,7 @@ Serialize
 Number of elements to skip
 .TP
 .B \-T, --titles
-Print titles
+Print column titles (useful for CSV spreadsheets)
 .TP
 .B \-V, --version
 Print version
